--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,12 @@ version: '3.8'
 
 services:
   mongodb:
-    image: mongo:latest
+    image: mongo:6.0.2
     container_name: dev-mongodb
     ports:
       - 27017:27017
     volumes:
       - db-data:/data/db
-    # environment:
-    #   MONGO_INITDB_ROOT_USERNAME: admin
-    #   MONGO_INITDB_ROOT_PASSWORD: S3cret
 
 volumes:
   db-data:
