--- a/compose.yaml
+++ b/compose.yaml
@@ -1,16 +1,12 @@
-version: '3.8'
-
 services:
-  mongodb:
-    image: mongo:7.0.5
-    command: ["--replSet", "rs", "--bind_ip_all", "--port", "21664"]
-    container_name: sofya-rs
+  mongo:
+    image: mongo:7
+    command: ["--replSet", "rs", "--bind_ip_all", "--port", "27017"]
+    container_name: mongo-rs
     ports:
-      - 21664:21664
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - 27017:27017
     healthcheck:
-      test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'rs',members:[{_id:0,host:'host.docker.internal:21664'}]}) }" | mongosh --port 21664 --quiet
+      test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'rs',members:[{_id:0,host:'localhost:27017'}]}) }" | mongosh --port 27017 --quiet
       interval: 5s
       timeout: 30s
       start_period: 0s
