--- a/compose.yaml
+++ b/compose.yaml
@@ -1,18 +1,34 @@
 services:
   mongo:
     image: mongo:7
-    command: ["--replSet", "rs", "--bind_ip_all", "--port", "27017"]
+    # command: ["--replSet", "rs", "--bind_ip_all", "--port", "27019", "--keyFile", "/etc/mongodb/pki/rs_keyfile"]
+    command: [
+      "--replSet", "rs",
+      "--bind_ip_all",
+      "--port", "27017", 
+      "--keyFile", "/etc/mongodb/pki/rs_keyfile",
+      "--tlsMode", "requireTLS",
+      "--tlsCertificateKeyFile", "/etc/ssl/certs/mongodb_node_1.pem",
+      "--tlsCAFile", "/etc/ssl/certs/ca.pem",
+      "--tlsAllowConnectionsWithoutCertificates"
+    ]
     container_name: mongo-rs
     ports:
       - 27017:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin
     healthcheck:
-      test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'rs',members:[{_id:0,host:'localhost:27017'}]}) }" | mongosh --port 27017 --quiet
+      test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'rs',members:[{_id:0,host:'localhost:27017'}]}) }" | mongosh --port 27017 --tls --tlsAllowInvalidCertificates -u $${MONGO_INITDB_ROOT_USERNAME} -p $${MONGO_INITDB_ROOT_PASSWORD}
       interval: 5s
       timeout: 30s
       start_period: 0s
       start_interval: 1s
       retries: 30
     volumes:
+      - ${PWD}/pki:/etc/mongodb/pki
+      - ${PWD}/tls/mongodb_node_1.pem:/etc/ssl/certs/mongodb_node_1.pem
+      - ${PWD}/tls/ca.pem:/etc/ssl/certs/ca.pem
       - rs-data:/data/db
       - rs-config:/data/configdb
 
