--- a/mongod.conf
+++ b/mongod.conf
@@ -5,7 +5,7 @@
 
 # Where and how to store data.
 storage:
-  dbPath: /var/lib/mongodb
+  dbPath: /data/db
 
 # where to write logging data.
 systemLog:
@@ -16,14 +16,13 @@ systemLog:
 # network interfaces
 net:
   port: 27017
-  bindIp: 127.0.0.1
+  bindIp: 0.0.0.0
   tls:
     mode: requireTLS
     disabledProtocols: TLS1_0,TLS1_1
-    PEMKeyFile: /etc/ssl/certs/mongodb_node_1.pem
+    certificateKeyFile: /etc/ssl/certs/mongodb_node_1.pem
     CAFile: /etc/ssl/certs/ca.pem
     allowConnectionsWithoutCertificates: true
-
 
 # how the process runs
 processManagement:
